# pikvm-agent

./: .gitignore  .mcp.json  AGENTS.md  README.md  config.example.yaml  pyproject.toml
bench/: ocr_corpus_bench.py  test_incidents.py
docs/: PIKVM_API.md  PLAN.md
pikvm_agent/: __init__.py  cli.py  config.py  daemon.py  debuglog.py  mcp_server.py  runtime.py
pikvm_agent/core/: __init__.py  errors.py  models.py  ports.py
pikvm_agent/executor/: __init__.py  burst.py  playbooks.py  recovery.py  transactions.py  typing.py  verification.py
pikvm_agent/graph/: __init__.py  checkpoints.py  deps.py  graph.py  interrupts.py  nodes.py  routing.py  state.py
pikvm_agent/memory/: __init__.py  atlas_export.py  templates.py
pikvm_agent/operator/: __init__.py  fake.py  models.py  openrouter.py  prompts.py  schemas.py
pikvm_agent/pikvm/: __init__.py  client.py  fake.py  hid.py  keyboard_state.py  screenshot.py  timing.py  windmouse.py
pikvm_agent/policy/: __init__.py  approvals.py  risk.py  safety.py
pikvm_agent/store/: __init__.py  frames.py  sqlite.py  trace.py
pikvm_agent/vision/: __init__.py  actionability.py  frame_diff.py  mode_detector.py  omniparser_client.py  omniparser_manager.py  (+8 more)
scripts/: setup-omniparser.sh
tests/: conftest.py  test_actionability.py  test_atlas_export.py  test_atlas_export_hardening.py  test_burst.py  test_core.py  test_cursor_tracking.py  test_desktop_integration.py  test_lazy_startup.py  test_mode_detector.py  test_openrouter.py  test_operator.py  test_phase1_shell.py  test_phase3_graph.py  test_phase3_hardening.py  test_phase3_runtime.py  test_phase7_console.py  test_pikvm.py  test_playbooks.py  test_policy.py  test_policy_hardening.py  test_prompt_injection_hardening.py  test_providers.py  test_recovery.py  test_smoke_cli.py  test_sprintc_hardening.py  test_timing.py  test_transactions.py  test_typing.py  test_verification.py  test_verification_hardening.py  test_vision.py  test_windmouse.py
(+2 files in other folders)
