[project]
name = "pikvm-agent"
version = "0.1.0"
description = "Transactional computer-use runtime for a physical machine driven through PiKVM."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Kieran Drewett", email = "kieran@drewett.dev" }]

# Core runtime. Everything here installs cleanly with no native ML toolchain.
# The heavy local vision stack (OmniParser / PaddleOCR / OpenCV) is an OPTIONAL
# extra — the daemon defaults to PiKVM's built-in tesseract OCR and degrades
# gracefully when those services are absent. See README.
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "websockets>=12",
  "pydantic>=2",
  "pydantic-settings>=2",
  "pillow>=10",
  "numpy>=1.26",
  "imagehash>=4.3",
  "langgraph>=0.2",
  "langchain-core>=0.3",
  "langgraph-checkpoint-sqlite>=2",
  "aiosqlite>=0.20",
  "mcp[cli]>=1.2",
  "python-multipart>=0.0.9",
  "rich>=13",
  "typer>=0.12",
  "orjson>=3.10",
  "pyyaml>=6",
]

[project.optional-dependencies]
# Heavy local ML vision stack. NOT required to run the daemon, the graph, the
# policy engine, the verifier, or the E1-E10 regression suite. Install only when
# you want local OmniParser grounding + PaddleOCR read-back instead of the
# zero-dependency PiKVM tesseract OCR fallback:
#   uv pip install -e '.[vision]'
# PaddleOCR additionally needs a matching paddlepaddle wheel installed by hand
# (CPU or CUDA) — see README.
vision = [
  "paddleocr>=2.7",
  "paddlex>=3",
  "opencv-python>=4.9",
]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[project.scripts]
pikvm-agent = "pikvm_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pikvm_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "bench"]
